--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <body>
 
     <div id="searchContainer">
-        <input id="searchInput" type="text" placeholder="Search by name or query...">
+        <input id="searchInput" type="text" placeholder="Search...">
         <button id="searchBtn">Search</button>
         <div id="suggestions"></div>
     </div>
@@ -71,3 +71,4 @@
 
 </body>
 </html>
+
